--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-      "dev": "next dev -p 3000",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev -p 3000",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "next": "14.2.5",
-      "react": "18.3.1",
-      "react-dom": "18.3.1",
-      "clsx": "2.1.1"
+        "clsx": "2.1.1",
+        "next": "14.2.5",
+        "react": "18.3.1",
+        "react-dom": "18.3.1"
     },
     "devDependencies": {
-      "autoprefixer": "10.4.20",
-      "postcss": "8.4.41",
-      "tailwindcss": "3.4.10",
-      "typescript": "5.6.2"
+        "@types/node": "^24.5.2",
+        "@types/react": "^19.1.13",
+        "autoprefixer": "10.4.20",
+        "postcss": "8.4.41",
+        "tailwindcss": "3.4.10",
+        "typescript": "^5.6.2"
     }
-  }
-  
+}
