--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    "name": "locksmithpro-express",
-    "private": true,
-    "version": "1.0.0",
-    "type": "module",
-    "engines": { "node": ">=18.17" },
-    "scripts": {
-      "dev": "next dev -p 3000",
-      "build": "next build",
-      "postbuild": "node scripts/generate-sitemap.mjs",
-      "start": "next start -p 3000",
-      "sitemap": "node scripts/generate-sitemap.mjs",
-      "lint": "next lint"
-    },
-    "dependencies": {
-      "clsx": "2.1.1",
-      "next": "14.2.5",
-      "react": "18.3.1",
-      "react-dom": "18.3.1"
-    },
-    "devDependencies": {
-      "@types/node": "^24.5.2",
-      "@types/react": "^19.1.13",
-      "autoprefixer": "10.4.20",
-      "postcss": "8.4.41",
-      "tailwindcss": "3.4.10",
-      "typescript": "^5.9.2"
-    }
+  "name": "locksmithpro-express",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "engines": { "node": "20.x" }
+,
+  "scripts": {
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "postbuild": "node scripts/generate-sitemap.mjs",
+    "start": "next start -p 3000",
+    "sitemap": "node scripts/generate-sitemap.mjs",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "clsx": "2.1.1",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.41",
+    "tailwindcss": "3.4.10",
+    "typescript": "^5.9.2"
   }
-  
+}
