--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
+--- filename: package.json ---
 {
   "name": "locksmithpro-express",
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "engines": { "node": "20.x" }
-,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
-    "postbuild": "node scripts/generate-sitemap.mjs",
-    "start": "next start -p 3000",
+    "dev": "next dev",
+    "build": "npm run sitemap && next build",
+    "start": "next start",
     "sitemap": "node scripts/generate-sitemap.mjs",
     "lint": "next lint"
   },
