--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "engines": {
-    "node": "20.x"
-  },
+  "engines": { "node": "20.x" }
+,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
-    "sitemap": "echo 'Sitemap is now generated automatically during the build process.'",
+    "postbuild": "node scripts/generate-sitemap.mjs",
+    "start": "next start -p 3000",
+    "sitemap": "node scripts/generate-sitemap.mjs",
     "lint": "next lint"
   },
   "dependencies": {
